Added user counters

--- a/styles/home.scss
+++ b/styles/home.scss
@@ -87,3 +87,9 @@ line-height: 60px;
 padding: 0 10px;
 text-decoration: none;
 }
+
+.counter {
+  float: right;
+  font-size: 25px;
+  margin-top: 0.7em;
+}
